--- a/index.html
+++ b/index.html
@@ -224,6 +224,22 @@
   </div>
 
   <!-- 3d model viewer -->
+  <table class="table">
+      <tbody>
+      <tr>
+        <th>
+          <video muted autoplay controls loop width="12%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
+          <video muted autoplay controls loop width="12%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
+          <video muted autoplay controls loop width="12%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
+          <video muted autoplay controls loop width="12%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
+          <video muted autoplay controls loop width="12%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
+          <video muted autoplay controls loop width="12%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
+          <video muted autoplay controls loop width="12%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
+          <video muted autoplay controls loop width="12%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video>
+        </th>
+      </tr>
+      </tbody>
+  </table>
   <div class="container is-max-desktop">
     <img src="assets/backpack/input.png" width="12%">
     <img src="assets/bird/input.png" width="12%">
@@ -234,18 +250,9 @@
     <img src="assets/panda_back/input.png" width="12%">
     <img src="assets/table/input.png" width="12%">
   </div>
-  <div class="container is-max-desktop">
-    <video muted autoplay loop width="12%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay loop width="12%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay loop width="12%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay loop width="12%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay loop width="12%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay loop width="12%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay loop width="12%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay loop width="12%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video>
-  </div>
+
   </section>
- 
+
 
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
