--- a/index.html
+++ b/index.html
@@ -225,24 +225,28 @@
 
   <!-- 3d model viewer -->
   <div class="container is-max-desktop">
-    <img src="assets/backpack/input.png" width="12%">
-    <img src="assets/bird/input.png" width="12%">
-    <img src="assets/dragon/input.png" width="12%">
-    <img src="assets/drum_kids/input.png" width="12%">
-    <img src="assets/drums/input.png" width="12%">
-    <img src="assets/furnitures/input.png" width="12%">
-    <img src="assets/panda_back/input.png" width="12%">
-    <img src="assets/table/input.png" width="12%">
+    <img src="assets/backpack/input.png" width="24%">
+    <img src="assets/bird/input.png" width="24%">
+    <img src="assets/dragon/input.png" width="24%">
+    <img src="assets/drum_kids/input.png" width="24%">
   </div>
   <div class="container is-max-desktop">
-    <video muted autoplay controls loop width="12%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop width="12%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop width="12%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop width="12%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop width="12%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop width="12%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop width="12%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay controls loop width="12%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="24%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="24%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="24%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="24%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
+  </div>
+  <div class="container is-max-desktop">
+    <img src="assets/drums/input.png" width="24%">
+    <img src="assets/furnitures/input.png" width="24%">
+    <img src="assets/panda_back/input.png" width="24%">
+    <img src="assets/table/input.png" width="24%">
+  </div>
+  <div class="container is-max-desktop">
+    <video muted autoplay controls loop width="24%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="24%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="24%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay controls loop width="24%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video>
   </div>
   </section>
 
