--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <img src="assets/table/input.png" width="12%">
   </div>
   <div class="container is-max-desktop content">
-    <video muted autoplay controls loop width="12%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay playsinline controls loop width="12%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop width="12%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop width="12%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
     <video muted autoplay controls loop width="12%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
