--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   </div>
 
   <!-- 3d model viewer -->
-  <div class="container is-max-desktop content">
+  <div class="container content">
     <img src="assets/backpack/input.png" width="12%">
     <img src="assets/bird/input.png" width="12%">
     <img src="assets/dragon/input.png" width="12%">
@@ -234,15 +234,15 @@
     <img src="assets/panda_back/input.png" width="12%">
     <img src="assets/table/input.png" width="12%">
   </div>
-  <div class="container is-max-desktop content">
-    <video muted autoplay style="pointer-events: none;" loop width="12%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay style="pointer-events: none;" loop width="12%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay style="pointer-events: none;" loop width="12%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay style="pointer-events: none;" loop width="12%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay style="pointer-events: none;" loop width="12%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay style="pointer-events: none;" loop width="12%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay style="pointer-events: none;" loop width="12%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
-    <video muted autoplay style="pointer-events: none;" loop width="12%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video>
+  <div class="container content">
+    <video muted autoplay loop width="12%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay loop width="12%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay loop width="12%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay loop width="12%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay loop width="12%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay loop width="12%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay loop width="12%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video>
+    <video muted autoplay loop width="12%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video>
   </div>
   </section>
 
