--- a/index.html
+++ b/index.html
@@ -234,20 +234,22 @@
     <img src="assets/panda_back/input.png" width="12%">
     <img src="assets/table/input.png" width="12%">
   </div>
-  <table class="table">
-      <tbody>
-        <tr>
-          <th> <video muted autoplay loop height="100%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video> </th>
-          <th> <video muted autoplay loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video> </th>
-          <th> <video muted autoplay loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video> </th>
-          <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
-          <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
-          <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
-          <th> <video muted autoplay loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video> </th>
-          <th> <video muted autoplay loop height="100%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video> </th>
-        </tr>
-      </tbody>
-  </table>
+  <div class="container is-max-desktop content">
+    <table class="table">
+        <tbody>
+          <tr>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video> </th>
+          </tr>
+        </tbody>
+    </table>
+  </div>
   </section>
 
 
