--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
         </tbody>
     </table>
   </div>
+  <div class="container is-max-desktop content">
+    <img src="images/comparison.png">
+  </div>
   </section>
 
 
