--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
   <div class="container is-max-desktop content">
     <img src="images/comparison.png">
   </div>
+    <p>HarmonyView generate multi-view consistent images and plausible 3D contents for complex scenes, or rear-view images.</p>
   </section>
 
 
