--- a/index.html
+++ b/index.html
@@ -252,8 +252,15 @@
   </div>
   <div class="container is-max-desktop content">
     <img src="images/comparison.png">
-  </div>
     <p>HarmonyView generate multi-view consistent images and plausible 3D contents for complex scenes, or rear-view images.</p>
+  </div>
+
+  <!-- Results. -->
+  <div class="columns is-centered has-text-centered">
+    <div class="column is-six-fifths">
+      <h2 class="title is-3"><img id="painting_icon" width="3%" src="https://cdn-icons-png.flaticon.com/512/5886/5886212.png"> Text-to-3D</h2>
+     </div>
+  </div>
   </section>
 
 
