--- a/index.html
+++ b/index.html
@@ -252,7 +252,11 @@
   </div>
   <div class="container is-max-desktop content">
     <img src="images/comparison.png">
+  </div>
+  <div class="columns is-centered has-text-centered">
+    <div class="column is-six-fifths">
     <p>HarmonyView generate multi-view consistent images and plausible 3D contents for complex scenes, or rear-view images.</p>
+    </div>
   </div>
 
   <!-- Results. -->
