--- a/index.html
+++ b/index.html
@@ -265,6 +265,23 @@
       <h2 class="title is-3"><img id="painting_icon" width="3%" src="https://cdn-icons-png.flaticon.com/512/5886/5886212.png"> Text-to-3D</h2>
      </div>
   </div>
+  <div class="container is-max-desktop content">
+    <table class="table">
+        <tbody>
+          <tr>
+            <th> <img src="assets/boxer_toy/boxer_toy-text.pdf"> </th>
+            <th> <img src="assets/boxer_toy/boxer_toy.png"> </th>
+            <th> <img src="assets/boxer_toy/boxer_toy1.pdf"> </th>
+            <th> <img src="assets/boxer_toy/boxer_toy2.pdf"> </th>
+            <th> <img src="assets/boxer_toy/boxer_toy3.pdf"> </th>
+            <th> <img src="assets/boxer_toy/boxer_toy4.pdf"> </th>
+            <th> <img src="assets/boxer_toy/boxer_toy5.pdf"> </th>
+            <th> <img src="assets/boxer_toy/boxer_toy-mesh.pdf"> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/boxer_toy/rendering.mp4" type="video/mp4"> </video> </th>
+          </tr>
+        </tbody>
+    </table>
+  </div>
   </section>
 
 
