--- a/index.html
+++ b/index.html
@@ -269,14 +269,8 @@
     <table class="table">
         <tbody>
           <tr>
-            <th> <img src="assets/boxer_toy/boxer_toy-text.pdf"> </th>
+            <th class="has-text-centered"> A boxer toy made of wood </th>
             <th> <img src="assets/boxer_toy/boxer_toy.png"> </th>
-            <th> <embed src="assets/boxer_toy/boxer_toy1.pdf"/> </th>
-            <th> <embed src="assets/boxer_toy/boxer_toy2.pdf"/> </th>
-            <th> <embed src="assets/boxer_toy/boxer_toy3.pdf"/> </th>
-            <th> <embed src="assets/boxer_toy/boxer_toy4.pdf"/> </th>
-            <th> <embed src="assets/boxer_toy/boxer_toy5.pdf"/> </th>
-            <th> <img src="assets/boxer_toy/boxer_toy-mesh.pdf"> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/boxer_toy/rendering.mp4" type="video/mp4"> </video> </th>
           </tr>
         </tbody>
