--- a/index.html
+++ b/index.html
@@ -266,15 +266,7 @@
      </div>
   </div>
   <div class="container is-max-desktop content">
-    <table class="table">
-        <tbody>
-          <tr>
-            <th class="has-text-centered"> A boxer toy made of wood </th>
-            <th> <img src="assets/boxer_toy/boxer_toy.png"> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/boxer_toy/rendering.mp4" type="video/mp4"> </video> </th>
-          </tr>
-        </tbody>
-    </table>
+   <img src="images/t2i.png">
   </div>
   </section>
 
