--- a/index.html
+++ b/index.html
@@ -265,7 +265,53 @@
       <h2 class="title is-3"><img id="painting_icon" width="3%" src="https://cdn-icons-png.flaticon.com/512/5886/5886212.png"> More Results (with Diversity)</h2>
      </div>
   </div>
-
+    <!-- 3d model viewer -->
+  <div class="container is-max-desktop content">
+    <img src="assets/backpack2/input.png" width="12%">
+    <img src="assets/bird/input.png" width="12%">
+    <img src="assets/dragon/input.png" width="12%">
+    <img src="assets/drum_kids/input.png" width="12%">
+    <img src="assets/drums/input.png" width="12%">
+    <img src="assets/furnitures/input.png" width="12%">
+    <img src="assets/panda_back/input.png" width="12%">
+    <img src="assets/table/input.png" width="12%">
+  </div>
+  <div class="container is-max-desktop content">
+    <table class="table">
+        <tbody>
+          <tr>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering1.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video> </th>
+          </tr>
+          <tr>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering2.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video> </th>
+          </tr>
+          <tr>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering3.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video> </th>
+          </tr>
+        </tbody>
+    </table>
+  </div>
   <!-- Results. -->
   <div class="columns is-centered has-text-centered">
     <div class="column is-six-fifths">
