--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <!-- 3d model viewer -->
   <div class="container is-max-desktop content">
     <img src="assets/backpack2/input.png" width="12%">
-    <img src="assets/bird/input.png" width="12%">
+    <img src="assets/kunkun/input.png" width="12%">
     <img src="assets/dragon/input.png" width="12%">
     <img src="assets/drum_kids/input.png" width="12%">
     <img src="assets/drums/input.png" width="12%">
@@ -281,7 +281,7 @@
         <tbody>
           <tr>
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering1.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering1.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
@@ -291,7 +291,7 @@
           </tr>
           <tr>
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering2.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering2.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
@@ -301,7 +301,7 @@
           </tr>
           <tr>
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering3.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering3.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
