--- a/index.html
+++ b/index.html
@@ -223,20 +223,19 @@
      </div>
   </div>
 
-  <!-- 3d model viewer -->
-  <div class="container is-max-desktop content">
-    <img src="assets/backpack/input.png" width="12%">
-    <img src="assets/bird/input.png" width="12%">
-    <img src="assets/dragon/input.png" width="12%">
-    <img src="assets/drum_kids/input.png" width="12%">
-    <img src="assets/drums/input.png" width="12%">
-    <img src="assets/furnitures/input.png" width="12%">
-    <img src="assets/panda_back/input.png" width="12%">
-    <img src="assets/table/input.png" width="12%">
-  </div>
   <div class="container is-max-desktop content">
     <table class="table">
         <tbody>
+          <tr>
+            <th> <img src="assets/backpack/input.png"> </th>
+            <th> <img src="assets/bird/input.png"> </th>
+            <th> <img src="assets/dragon/input.png"> </th>
+            <th> <img src="assets/drum_kids/input.png"> </th>
+            <th> <img src="assets/drums/input.png"> </th>
+            <th> <img src="assets/furnitures/input.png"> </th>
+            <th> <img src="assets/panda_back/input.png"> </th>
+            <th> <img src="assets/table/input.png"> </th>
+          </tr>
           <tr>
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/bird/rendering.mp4" type="video/mp4"> </video> </th>
