--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   </div>
 
   <!-- 3d model viewer -->
-  <div class="container is-max-desktop content">
+  <div class="container is-max-desktop has-text-centered">
     <img src="assets/backpack/input.png" width="12%">
     <img src="assets/bird/input.png" width="12%">
     <img src="assets/dragon/input.png" width="12%">
@@ -266,7 +266,7 @@
      </div>
   </div>
     <!-- 3d model viewer -->
-  <div class="container is-max-desktop content">
+  <div class="container is-max-desktop has-text-centered">
     <img src="assets/backpack2/input.png" width="12%">
     <img src="assets/kunkun/input.png" width="12%">
     <img src="assets/dragon/input.png" width="12%">
