--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
   <div class="container is-max-desktop has-text-centered">
     <img src="assets/backpack2/input.png" width="12%">
     <img src="assets/kunkun/input.png" width="12%">
-    <img src="assets/dragon/input.png" width="12%">
+    <img src="assets/lunch_bag/input.png" width="12%">
     <img src="assets/drum_kids/input.png" width="12%">
     <img src="assets/drums/input.png" width="12%">
     <img src="assets/furnitures/input.png" width="12%">
@@ -282,7 +282,7 @@
           <tr>
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering1.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering1.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering1.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
@@ -292,7 +292,7 @@
           <tr>
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering2.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering2.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering2.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
@@ -302,7 +302,7 @@
           <tr>
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering3.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering3.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/dragon/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering3.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
