--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <img src="assets/backpack2/input.png" width="12%">
     <img src="assets/kunkun/input.png" width="12%">
     <img src="assets/lunch_bag/input.png" width="12%">
-    <img src="assets/drum_kids/input.png" width="12%">
+    <img src="assets/monkey/input.png" width="12%">
     <img src="assets/drums/input.png" width="12%">
     <img src="assets/furnitures/input.png" width="12%">
     <img src="assets/panda_back/input.png" width="12%">
@@ -283,7 +283,7 @@
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering1.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering1.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering1.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/monkey/rendering1.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video> </th>
@@ -293,7 +293,7 @@
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering2.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering2.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering2.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/monkey/rendering2.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video> </th>
@@ -303,7 +303,7 @@
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering3.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering3.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering3.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/drum_kids/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/monkey/rendering3.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video> </th>
