--- a/index.html
+++ b/index.html
@@ -267,14 +267,11 @@
   </div>
     <!-- 3d model viewer -->
   <div class="container is-max-desktop has-text-centered">
-    <img src="assets/backpack2/input.png" width="12%">
-    <img src="assets/kunkun/input.png" width="12%">
-    <img src="assets/lunch_bag/input.png" width="12%">
-    <img src="assets/monkey/input.png" width="12%">
-    <img src="assets/drums/input.png" width="12%">
-    <img src="assets/furnitures/input.png" width="12%">
-    <img src="assets/panda_back/input.png" width="12%">
-    <img src="assets/table/input.png" width="12%">
+    <img src="assets/backpack2/input.png" width="19%">
+    <img src="assets/kunkun/input.png" width="19%">
+    <img src="assets/lunch_bag/input.png" width="19%">
+    <img src="assets/monkey/input.png" width="19%">
+    <img src="assets/bell/input.png" width="19%">
   </div>
   <div class="container is-max-desktop content">
     <table class="table">
@@ -284,30 +281,21 @@
             <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering1.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering1.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/monkey/rendering1.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/bell/rendering1.mp4" type="video/mp4"> </video> </th>
           </tr>
           <tr>
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering2.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering2.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering2.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/monkey/rendering2.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/bell/rendering2.mp4" type="video/mp4"> </video> </th>
           </tr>
           <tr>
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering3.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/kunkun/rendering3.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering3.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/monkey/rendering3.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/drums/rendering.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/furnitures/rendering.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/panda_back/rendering.mp4" type="video/mp4"> </video> </th>
-            <th> <video muted autoplay loop height="100%"> <source src="assets/table/rendering.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/bell/rendering3.mp4" type="video/mp4"> </video> </th>
           </tr>
         </tbody>
     </table>
