--- a/index.html
+++ b/index.html
@@ -267,11 +267,12 @@
   </div>
     <!-- 3d model viewer -->
   <div class="container is-max-desktop has-text-centered">
-    <img src="assets/backpack2/input.png" width="19%">
-    <img src="assets/kunkun/input.png" width="19%">
-    <img src="assets/lunch_bag/input.png" width="19%">
-    <img src="assets/monkey/input.png" width="19%">
-    <img src="assets/bell/input.png" width="19%">
+    <img src="assets/backpack2/input.png" width="16%">
+    <img src="assets/kunkun/input.png" width="16%">
+    <img src="assets/lunch_bag/input.png" width="16%">
+    <img src="assets/monkey/input.png" width="16%">
+    <img src="assets/bell/input.png" width="16%">
+    <img src="assets/grandfather/input.png" width="16%">
   </div>
   <div class="container is-max-desktop content">
     <table class="table">
@@ -282,6 +283,7 @@
             <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering1.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/monkey/rendering1.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/bell/rendering1.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/grandfather/rendering1.mp4" type="video/mp4"> </video> </th>
           </tr>
           <tr>
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering2.mp4" type="video/mp4"> </video> </th>
@@ -289,6 +291,7 @@
             <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering2.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/monkey/rendering2.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/bell/rendering2.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/grandfather/rendering2.mp4" type="video/mp4"> </video> </th>
           </tr>
           <tr>
             <th> <video muted autoplay loop height="100%"> <source src="assets/backpack2/rendering3.mp4" type="video/mp4"> </video> </th>
@@ -296,6 +299,7 @@
             <th> <video muted autoplay loop height="100%"> <source src="assets/lunch_bag/rendering3.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/monkey/rendering3.mp4" type="video/mp4"> </video> </th>
             <th> <video muted autoplay loop height="100%"> <source src="assets/bell/rendering3.mp4" type="video/mp4"> </video> </th>
+            <th> <video muted autoplay loop height="100%"> <source src="assets/grandfather/rendering3.mp4" type="video/mp4"> </video> </th>
           </tr>
         </tbody>
     </table>
