--- a/index.html
+++ b/index.html
@@ -248,6 +248,11 @@
   <div class="container is-max-desktop content">
     <img src="images/comparison.png">
   </div>
+  <div class="columns is-centered has-text-centered">
+    <div class="column is-six-fifths">
+    <p>HarmonyView generates realistic 3D content using just a single image. It excels at maintaining visual and geometric consistency across generated views while enhancing the diversity of novel views, even in complex scenes.</p>
+    </div>
+  </div>
 
   <!-- Results. -->
   <div class="columns is-centered has-text-centered">
