--- a/index.html
+++ b/index.html
@@ -299,6 +299,12 @@
         </tbody>
     </table>
   </div>
+
+  <div class="columns is-max-desktop is-centered has-text-centered">
+    <div class="column is-six-fifths">
+    <p> HarmonyView synergistically guide the synchronization of noisy multi-views facilitating geometric coherency among clean multi-views. Thus, HarmonyView generate diverse instances with different random seeds.</p>
+    </div>
+  </div>
   <!-- Results. -->
   <div class="columns is-centered has-text-centered">
     <div class="column is-six-fifths">
