--- a/index.html
+++ b/index.html
@@ -305,6 +305,13 @@
     <p> HarmonyView synergistically guide the synchronization of noisy multi-views facilitating geometric coherency among clean multi-views. Thus, HarmonyView generate diverse instances with different random seeds.</p>
     </div>
   </div>
+  <br>
+  <div class="content">
+    <h2 class="title is-4"> Quantitative Comparison </h2>
+      <p> HarmonyView outperforms state-of-the-art methods across all metrics in both novel view synthesis task and 3D reconstruction task. Notably, HarmonyView achieves the best results by a significant margin in 3D reconstruction task.</p>
+
+      <img id="weighting_computational" src="images/table.png">
+  </div>
   </section>
 
 
