--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     </div>
   </div>
   <br>
-  <div class="content">
+  <div class="columns is-max-desktop is-centered has-text-centered">
     <h2 class="title is-4"> Quantitative Comparison </h2>
       <p> HarmonyView outperforms state-of-the-art methods across all metrics in both novel view synthesis task and 3D reconstruction task. Notably, HarmonyView achieves the best results by a significant margin in 3D reconstruction task.</p>
 
