--- a/index.html
+++ b/index.html
@@ -306,11 +306,16 @@
     </div>
   </div>
   <br>
+  <div class="columns is-centered has-text-centered">
+    <div class="column is-six-fifths">
+      <h2 class="title is-4"> Quantitative Comparison</h2>
+     </div>
+  </div>
   <div class="columns is-max-desktop is-centered has-text-centered">
-    <h2 class="title is-4"> Quantitative Comparison </h2>
-      <p> HarmonyView outperforms state-of-the-art methods across all metrics in both novel view synthesis task and 3D reconstruction task. Notably, HarmonyView achieves the best results by a significant margin in 3D reconstruction task.</p>
-
-      <img id="weighting_computational" src="images/table.png">
+    <div class="column is-six-fifths">
+    <p>HarmonyView outperforms state-of-the-art methods across all metrics in both novel view synthesis task and 3D reconstruction task. Notably, HarmonyView achieves the best results by a significant margin in 3D reconstruction task.</p>
+    <img id="weighting_computational" src="images/table.png">
+    </div>
   </div>
   </section>
 
