--- a/index.html
+++ b/index.html
@@ -324,12 +324,14 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>
-  @misc{liu2023improvedllava,
-          author={Liu, Haotian and Li, Chunyuan and Li, Yuheng and Lee, Yong Jae},
-          title={Improved Baselines with Visual Instruction Tuning}, 
-          publisher={arXiv:2310.03744},
-          year={2023},
-  }
+@misc{woo2023harmonyview,
+      title={HarmonyView: Harmonizing Consistency and Diversity in One-Image-to-3D},
+      author={Sangmin Woo and Byeongjun Park and Hyojun Go and Jin-Young Kim and Changick Kim},
+      year={2023},
+      eprint={2312.15980},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
   </code></pre>
     </div>
   </section>
