--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <span class="icon">
                       <i class="far fa-images"></i>
                     </span>
-                    <span>Live Demo (Comming Soon)</span>
+                    <span>Live Demo</span>
                   </a>
                 </span>
               </div>
