--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">HarmonyView: Harmonizing Consistency and Diversity in One-Image-to-3D</h1>
+            <div class="is-size-3 paper accepted">
+              <strong>CVPR 2024</strong>
+            </div>
             <br>
             <div class="is-size-4 publication-authors">
               <span class="author-block">
